# rainonsnow

./: .Rbuildignore  .gitignore  DESCRIPTION  NAMESPACE  README.Rmd  README.md  pyproject.toml
R/: distribution_likeliness.R  dl_null.R  dl_rqforest.R  dst_empirical_to_gp.R  enframe_at_events.R  get_pot_events.R  joint_rain_snow.R  mix2.R  new_dstlrn.R  predict.R  print.R  utils.R
apps/dl-diagnostics-explorer/: app.R
apps/joint-rain-snow-explorer/: app.R
apps/pot-explorer/: app.R
apps/return-level-explorer/: app.R
apps/runoff-marginals-explorer/: app.R
inputs/: dl_metadata.yaml  joint_rain_snow_metadata.yaml  pot_metadata.yaml  rain_snow_conditional_runoff.yaml
man/: convert_emp_to_gp.Rd  df_rows_have_missing.Rd  distribution_likeliness.Rd  dl_null.Rd  dl_rqforest.Rd  ecdf_to_dst.Rd  enframe_at_events.Rd  fit_joint_rain_snow_cell.Rd  fit_joint_rain_snow_cells.Rd  get_pot_events.Rd  grid_from_scatter.Rd  mix2.Rd  new_dstlrn.Rd  predict.dstlrn.Rd  print.dstlrn.Rd  print.joint_rain_snow.Rd  rp_reporting.Rd  simulate_joint_rain_snow.Rd
scripts/: 1-download_data-eo.py  2-tablify_spatial_eo.r  3-pot_spatial_eo.r  4-distributional_learning.r  4-dl_rqforest_spatial_eo.r  5-marginal_mixtures_spatial_eo.r  5-runoff_marginals.r  6-drivers_joint_distribution.r  6-joint_rain_snow_spatial_eo.r  7-likeliest_rain_snow.r  7-rain_snow_conditional_runoff_spatial_eo.r  analyze.bib  analyze.html  analyze.qmd  analyze.r  download_data.py  download_era5_range.py  era5_annual_peak_antecedent.py  tablify_netcdf.r
